# kylix

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLANS.md  README.md  SECURITY.md  dist-workspace.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: bench-track.yml  bench.yml  ci-full.yml  ci.yml  fuzz.yml  publish.yml  release.yml
kylix/: Cargo.toml
kylix-bench/: Cargo.toml
kylix-bench/benches/: comparison.rs  ml_dsa.rs  ml_dsa_comparison.rs  ml_kem.rs  slh_dsa.rs  slh_dsa_comparison.rs
kylix-bench/src/: lib.rs
kylix-cli/: Cargo.toml
kylix-cli/src/: main.rs
kylix-cli/tests/: cli_integration.rs
kylix-core/: Cargo.toml  README.md
kylix-core/src/: error.rs  lib.rs  ntt.rs  reduce.rs  simd.rs  traits.rs
kylix-ml-dsa/: Cargo.toml  README.md
kylix-ml-dsa/fuzz/: Cargo.toml  README.md
kylix-ml-dsa/fuzz/fuzz_targets/: fuzz_keygen.rs  fuzz_roundtrip.rs  fuzz_sign.rs  fuzz_verify.rs
kylix-ml-dsa/src/: hash.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rounding.rs  sample.rs  sign.rs  types.rs
kylix-ml-dsa/src/simd/: avx2.rs  mod.rs  neon.rs  wasm.rs
kylix-ml-dsa/tests/: acvp_tests.rs  proptest_properties.rs
kylix-ml-kem/: Cargo.toml  README.md
kylix-ml-kem/fuzz/: Cargo.toml  README.md
kylix-ml-kem/fuzz/fuzz_targets/: fuzz_decaps.rs  fuzz_encaps.rs  fuzz_keygen.rs  fuzz_roundtrip.rs
kylix-ml-kem/src/: encode.rs  hash.rs  k_pke.rs  kat.rs  kem.rs  lib.rs  matrix.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_768.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  sample.rs  types.rs
kylix-ml-kem/src/simd/: avx2.rs  mod.rs  neon.rs
kylix-ml-kem/tests/: acvp_tests.rs  proptest_properties.rs
kylix-slh-dsa/: Cargo.toml  README.md
kylix-slh-dsa/fuzz/: Cargo.toml  README.md
kylix-slh-dsa/fuzz/fuzz_targets/: fuzz_keygen.rs  fuzz_roundtrip.rs  fuzz_sign.rs  fuzz_verify.rs
kylix-slh-dsa/src/: address.rs  fors.rs  hash.rs  hash_sha2.rs  hash_shake.rs  hypertree.rs  lib.rs  parallel.rs  params.rs  sign.rs  slh_dsa_sha2_128f.rs  slh_dsa_sha2_128s.rs  slh_dsa_sha2_192f.rs  slh_dsa_sha2_192s.rs  slh_dsa_sha2_256f.rs  slh_dsa_sha2_256s.rs  slh_dsa_shake_128f.rs  slh_dsa_shake_128s.rs  slh_dsa_shake_192f.rs  slh_dsa_shake_192s.rs  slh_dsa_shake_256f.rs  slh_dsa_shake_256s.rs  types.rs  utils.rs  wots.rs  xmss.rs
kylix-slh-dsa/tests/: acvp_tests.rs  proptest_properties.rs
kylix/src/: lib.rs
timing/: Cargo.toml
