[workspace]
resolver = "2"
members = [
    "kylix",
    "kylix-core",
    "kylix-ml-kem",
    "kylix-cli",
]
exclude = [
    "kylix-ml-kem/fuzz",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Crane Valley <dev@crane-valley.co.jp>"]
license = "MIT"
repository = "https://github.com/crane-valley/kylix"
homepage = "https://kylix-pqc.dev/"
categories = ["cryptography", "no-std"]
keywords = ["post-quantum", "ml-kem", "pqc", "cryptography"]

[workspace.dependencies]
# Internal crates
kylix-pqc = { path = "kylix", version = "0.2.0" }
kylix-core = { path = "kylix-core", version = "0.2.0", default-features = false }
kylix-ml-kem = { path = "kylix-ml-kem", version = "0.2.0", default-features = false }

# External dependencies
thiserror = "2.0"
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
rand_core = { version = "0.9", default-features = false }
subtle = { version = "2.5", default-features = false }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
hex = "0.4"
base64 = "0.22"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
