[workspace]
resolver = "2"
members = [
    "kylix",
    "kylix-core",
    "kylix-ml-kem",
    "kylix-ml-dsa",
    "kylix-slh-dsa",
]
exclude = [
    "kylix-ml-kem/fuzz",
    "kylix-ml-dsa/fuzz",
    "kylix-slh-dsa/fuzz",
    "timing",
]

[workspace.package]
version = "0.4.5"
edition = "2021"
rust-version = "1.75"
authors = ["Crane Valley <dev@crane-valley.co.jp>"]
license = "MIT"
repository = "https://github.com/crane-valley/kylix"
homepage = "https://kylix-pqc.dev/"
categories = ["cryptography", "no-std"]
keywords = ["post-quantum", "ml-kem", "pqc", "cryptography"]

[workspace.dependencies]
# Internal crates
kylix-pqc = { path = "kylix", version = "0.4.5" }
kylix-core = { path = "kylix-core", version = "0.4.5", default-features = false }
kylix-ml-kem = { path = "kylix-ml-kem", version = "0.4.5", default-features = false }
kylix-ml-dsa = { path = "kylix-ml-dsa", version = "0.4.5", default-features = false }
kylix-slh-dsa = { path = "kylix-slh-dsa", version = "0.4.5", default-features = false }

# External dependencies
thiserror = "2.0"
zeroize = { version = "1.8", default-features = false, features = ["derive", "alloc"] }
rand_core = { version = "0.9", default-features = false }
subtle = { version = "2.5", default-features = false }

# Optimize crypto-heavy packages in dev/test builds.
# SLH-DSA is hash-intensive and 10-15x slower at opt-level=0.
[profile.dev.package.sha3]
opt-level = 2
[profile.dev.package.keccak]
opt-level = 2
[profile.dev.package.digest]
opt-level = 2
[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.hmac]
opt-level = 2
[profile.dev.package.subtle]
opt-level = 2
[profile.dev.package.kylix-core]
opt-level = 2
[profile.dev.package.kylix-ml-kem]
opt-level = 2
[profile.dev.package.kylix-ml-dsa]
opt-level = 2
[profile.dev.package.kylix-slh-dsa]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
