[package]
name = "kylix-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarks for the Kylix post-quantum cryptography library"
publish = false

[features]
default = []
simd = ["kylix-ml-dsa/simd"]
parallel = ["kylix-slh-dsa/parallel"]

# Comparison benchmarks (optional, may require different MSRV)
compare-pqcrypto = ["pqcrypto-mlkem"]
# compare-rustcrypto disabled: rand_core 0.10-rc incompatible with our rand_core 0.9
# compare-rustcrypto = ["ml-kem"]
compare-libcrux = ["libcrux-ml-kem"]
compare-all = ["compare-pqcrypto", "compare-libcrux"]

[dependencies]
kylix-ml-kem = { path = "../kylix-ml-kem", features = ["ml-kem-512", "ml-kem-768", "ml-kem-1024"] }
kylix-ml-dsa = { path = "../kylix-ml-dsa", features = ["ml-dsa-44", "ml-dsa-65", "ml-dsa-87"] }
kylix-slh-dsa = { path = "../kylix-slh-dsa", features = ["slh-dsa-shake-128f", "slh-dsa-shake-192f", "slh-dsa-shake-256f"] }
kylix-core.workspace = true
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional comparison libraries (feature-gated)
pqcrypto-mlkem = { version = "0.1", optional = true }
# ml-kem disabled: uses rand_core 0.10-rc which is incompatible with our rand_core 0.9
# ml-kem = { version = "0.3.0-pre", optional = true }
libcrux-ml-kem = { version = "0.0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ml_kem"
harness = false

[[bench]]
name = "ml_dsa"
harness = false

[[bench]]
name = "slh_dsa"
harness = false

[[bench]]
name = "comparison"
harness = false
