[package]
name = "kylix-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Kylix post-quantum cryptography operations"

[[bin]]
name = "kylix"
path = "src/main.rs"

[dependencies]
kylix-pqc.workspace = true
kylix-bench = { path = "../kylix-bench" }
clap.workspace = true
clap_complete.workspace = true
hex.workspace = true
base64.workspace = true
anyhow.workspace = true
rand = "0.9"
zeroize.workspace = true
serde_json = "1.0"
which = "8.0"
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
