[package]
name = "kylix-ml-dsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ML-DSA (FIPS 204) implementation for the Kylix post-quantum cryptography library"
# Exclude large ACVP test vectors from published crate (12MB)
# Tests can still run from git repository
exclude = ["tests/acvp/"]

[features]
default = ["std", "ml-dsa-65", "simd"]
std = ["kylix-core/std"]
simd = []  # Enable SIMD optimizations (AVX2/NEON/WASM-SIMD128) - runtime detection for safety
ml-dsa-44 = []
ml-dsa-65 = []
ml-dsa-87 = []

[dependencies]
kylix-core.workspace = true
zeroize.workspace = true
rand_core.workspace = true
subtle.workspace = true
sha3 = { version = "0.10", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
rand = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.10"
