[package]
name = "kylix-ml-kem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ML-KEM (FIPS 203) implementation for the Kylix post-quantum cryptography library"
# Exclude large ACVP test vectors from published crate (1.4MB)
# Tests can still run from git repository
exclude = ["tests/acvp/"]

[features]
default = ["std", "ml-kem-768"]
std = ["kylix-core/std"]
ml-kem-512 = []
ml-kem-768 = []
ml-kem-1024 = []

[dependencies]
kylix-core.workspace = true
zeroize.workspace = true
rand_core.workspace = true
subtle.workspace = true
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
rand = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
