[package]
name = "kylix-slh-dsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "SLH-DSA (FIPS 205) implementation for the Kylix post-quantum cryptography library"
# Exclude large ACVP test vectors from published crate (30MB)
# Tests can still run from git repository
exclude = ["tests/acvp/"]

[features]
default = ["std", "slh-dsa-shake-128f"]
std = ["kylix-core/std"]
parallel = ["std", "rayon"]

# Internal meta-features (not for direct use)
any-variant = []
any-sha2-variant = ["any-variant", "dep:sha2", "dep:hmac"]

# SHAKE-based variants (recommended)
slh-dsa-shake-128s = ["any-variant"]
slh-dsa-shake-128f = ["any-variant"]
slh-dsa-shake-192s = ["any-variant"]
slh-dsa-shake-192f = ["any-variant"]
slh-dsa-shake-256s = ["any-variant"]
slh-dsa-shake-256f = ["any-variant"]

# SHA2-based variants
slh-dsa-sha2-128s = ["any-sha2-variant"]
slh-dsa-sha2-128f = ["any-sha2-variant"]
slh-dsa-sha2-192s = ["any-sha2-variant"]
slh-dsa-sha2-192f = ["any-sha2-variant"]
slh-dsa-sha2-256s = ["any-sha2-variant"]
slh-dsa-sha2-256f = ["any-sha2-variant"]

[dependencies]
kylix-core.workspace = true
zeroize.workspace = true
rand_core.workspace = true
subtle.workspace = true
sha2 = { version = "0.10", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false, optional = true }
# Pin rayon and rayon-core for MSRV 1.75 compatibility
# rayon-core 1.13+ requires Rust 1.80
rayon = { version = ">=1.10, <1.11", optional = true }
rayon-core = { version = ">=1.12, <1.13", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.10"
